--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: "Aditi Krishak's Homepage"
 description: "Email: krishak@usc.edu"
-logo: ADITI_USC.jpg
+logo: img/ADITI_USC.jpg
