--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-minimal
 title: "Aditi Krishak's Homepage"
 description: "Email: krishak@usc.edu"
 logo: img/ADITI_USC.jpg
+include: ["assets/style.css"]
