--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-theme: jekyll-theme-cayman
+remote_theme: pages-themes/cayman@v0.2.0
+plugins: jekyll-remote-theme 
 title: "Aditi Krishak's Homepage"
 description: "Email: krishak@usc.edu"
 logo: "img/ADITI_USC.jpg"
