--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-minimal
-description: [Email: krishak@usc.edu]
+title: 
+description: "Email: krishak@usc.edu"
 logo: "img/ADITI_USC.jpg"
 include: ["assets/style.css"]
