--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: "My Homepage"
-description: "Email: krishak@usc.edu"
+title: "Aditi Krishak"
+description: "PhD Student, Dept. of Physics and Astronomy, USC"
 logo: "img/ADITI_USC.jpg"
 include: ["assets/style.css"]
