--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
 title: "Aditi Krishak"
-description: "PhD Student,<br>Department of Physics and Astronomy,<br>University of Southern California" 
+description: "PhD Student in the Department of Physics and Astronomy,<br>University of Southern California" 
 logo: "img/ADITI_USC.jpg"
 include: ["assets/style.css"]
